--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Shrikhand&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap");
 body {
-  margin: 0px;
+  margin: 0;
   font-family: "Roboto", sans-serif;
 }
 
@@ -150,9 +150,23 @@ main .city i {
   font-weight: bold;
   padding-left: 32px;
 }
-.content {
-  border: 2px solid red;
+
+.restaurants-card {
+  background-color: #FFF;
+  border-radius: 10px;
+  width: 335px;
+  box-shadow: -2px 5px 16px -4px rgba(0, 0, 0, 0.301);
+  margin-bottom: 2em;
+  position: relative;
 }
 
+.restaurants-card img {
+  width: 100%;
+  height: 175px;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  margin: auto;
+  object-fit: cover;
+}
 
 /*# sourceMappingURL=style.css.map */
