--- a/SCSS/style.scss
+++ b/SCSS/style.scss
@@ -1,94 +1,95 @@
 @import url('https://fonts.googleapis.com/css2?family=Shrikhand&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap');
-@import "C:\Users\bolly\Desktop\PROJETS HAPSA DEV\PROJET 3\O MY FOOD 2\SCSS\libs";
+@import "libs/mixins.scss";
 
-body 
-    margin: 0px;
+body {
+    margin: 0;
     font-family: "Roboto", sans-serif;
+}
 
-header 
+header {
     font-family: "Shrikhand", cursive;
     text-align: center;
     box-shadow: 0 0 8px rgb(0 0 0 /25%);
     padding: 2px;
-    position: relative;
+    position: relative;}
 
-main .city 
+main .city {
     background-color: #eaeaea;
     @include display;
     padding: 4px;
-    gap: 16px;
+    gap: 16px;}
 
-main .city i 
-    font-size: 22px;
+main .city i {
+    font-size: 22px;}
 
-.reservation 
+.reservation {
    text-align: center;
    background-color: #f6f6f6;
-   padding-bottom: 32px;
+   padding-bottom: 32px;}
 
-.reservation h2 
+.reservation h2 {
     margin: 0px;
     padding-top: 32px;
-    font-size: 30px;
+    font-size: 30px;}
 
-.reservation p 
-    font-size: 16px;
+.reservation p {
+    font-size: 16px;}
 
-.reservation button 
+.reservation button {
     background-image: linear-gradient(to top, rgba(147, 86, 220, 0.9), rgba(255, 121, 218, 0.9));
     border-radius: 32px 32px 32px 32px;
     color: white;
     font-size: 16px;
     font-weight: bold;
     height: 48px;
-    width: 25%;
+    width: 25%;}
 
-.reservation button:hover 
+.reservation button:hover {
     transform: scale(1.02);
-    opacity: 0.9;
+    opacity: 0.9;}
   
 
-.howtodo h2 
-    @include h2;
+.howtodo h2 {
+    @include h2;}
  
-.cartes 
+.cartes {
     display: flex;
     gap: 100px;
-    padding-left: 200px;
+    padding-left: 200px;}
 
-.choice 
+.choice {
     @include fonctionnement;
-    @include display
+    @include display}
    
-   .cartes :hover 
-    background-color: thistle;
+   .cartes :hover {
+    background-color: thistle;}
   
-    .number 
+    .number {
     @include number;
-    transform: translate(180px);
+    transform: translate(180px);}
 
-.compose 
+.compose {
     @include fonctionnement;
-    @include display;
+    @include display;}
    
-   .number2 
+   .number2 {
     @include number;
-    transform: translate(555px);
+    transform: translate(555px);}
 
-.eat 
+.eat {
     @include fonctionnement;
-    @include display;
+    @include display;}
    
-    .number3 
+    .number3 {
         @include number;
-        transform: translate(920px);
+        transform: translate(920px);}
 
-.content h2 
-    @include h2; 
+.content h2 {
+    @include h2; }
 
-.restaurants-card
-    @include card
+.restaurants-card {
+    @include card}
     
-
-
+.restaurants-card img {
+    @include card-img}
