--- a/CSS/style.css
+++ b/CSS/style.css
@@ -145,7 +145,7 @@ main .city i {
   transform: translate(920px);
 }
 
-.content h2 {
+.menus h2 {
   font-size: 30px;
   font-weight: bold;
   padding-left: 32px;
@@ -158,6 +158,7 @@ main .city i {
   box-shadow: -2px 5px 16px -4px rgba(0, 0, 0, 0.301);
   margin-bottom: 2em;
   position: relative;
+  height: 250px;
 }
 
 .restaurants-card img {
@@ -173,22 +174,58 @@ main .city i {
   display: flex;
   justify-content: center;
   align-items: center;
+  gap: 3rem;
+}
+
+.restaurants-content {
+  height: 60px;
 }
 
 .restaurants-content_text h2 {
   color: black;
   padding-left: 15px;
   font-size: 22px;
+  align-items: center;
+  display: flex;
 }
 
 .restaurants-content_text p {
-  color: black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   padding-left: 15px;
 }
 
 .restaurants-content_heart {
   color: black;
-  padding-left: 250px;
+}
+
+.footer {
+  border: 2px black solid;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #353535;
+}
+
+.footer_container {
+  display: flex;
+  flex-direction: column;
+}
+
+.footer a {
+  color: white;
+  gap: 10rem;
+}
+
+.footer h3 {
+  font-family: "Shrikhand", cursive;
+  text-align: center;
+  position: relative;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 /*# sourceMappingURL=style.css.map */
