--- a/SCSS/style.scss
+++ b/SCSS/style.scss
@@ -85,35 +85,65 @@ main .city i {
         @include number;
         transform: translate(920px);}
 
-.content h2 {
+.menus h2 {
     @include h2;}
 
 .restaurants-card {
-    @include card;}
+    @include card;
+    height: 250px;
+    }
 
     .restaurants-card img {
         @include card-img;}
 
 .contain1 {
     @include display;
+    gap: 3rem;
     }
 
 .contain2 {
     @extend .contain1
     }
+
+.restaurants-content {
+    height: 60px;
+    }
         .restaurants-content_text h2 {
             @include color;
             padding-left: 15px;
             font-size: 22px;
+            align-items: center;
+            display: flex
+
             }
         .restaurants-content_text p {
-            @include color;
+            @include display;
             padding-left: 15px
             }
         .restaurants-content_heart {
             @include color;
-            padding-left: 250px;
-            }
- 
+ }
+
+.footer {
+    border: 2px black solid;
+    @include display;
+    background-color: #353535;
+}    
+    .footer_container {
+        display: flex;
+        flex-direction: column;
+        }
+    .footer a {
+        color: white;
+        gap: 10rem;
+        }    
+    .footer h3 {
+        font-family: "Shrikhand", cursive;
+        text-align: center;
+        position: relative;
+        color: white;
+        @include display;
+        }
+
 
 
