--- a/CSS/menus.css
+++ b/CSS/menus.css
@@ -42,8 +42,64 @@ header {
   padding-left: 1rem;
   margin-left: 1rem;
   width: 95%;
-  height: 90px;
+  height: 80px;
   gap: 1rem;
+  display: flex;
+  margin-bottom: 1rem;
+}
+
+.titre h2 {
+  padding: 1rem;
+}
+
+.menu_titre {
+  padding-right: 1rem;
+}
+
+.menu p {
+  margin-top: -1rem;
+}
+
+.menu_price p {
+  margin-left: 3rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.footer {
+  border: 2px black solid;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #353535;
+}
+
+.footer_container {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 2rem;
+}
+
+.footer a {
+  color: white;
+  margin-left: 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.footer h3 {
+  font-family: "Shrikhand", cursive;
+  text-align: center;
+  position: relative;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 25px;
+  margin-bottom: -0.1rem;
 }
 
 /*# sourceMappingURL=menus.css.map */
