--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,7 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Shrikhand&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap");
-
-
 body {
   margin: 0;
   font-family: "Roboto", sans-serif;
@@ -185,21 +183,24 @@ main .city i {
 
 .restaurants-content_text h2 {
   color: black;
-  padding-left: 15px;
   font-size: 22px;
   align-items: center;
   display: flex;
+  margin-top: 0.3rem;
 }
 
 .restaurants-content_text p {
   display: flex;
-  justify-content: center;
-  align-items: center;
-  padding-left: 15px;
+  color: black;
+  margin-top: -1rem;
+  margin-left: 2rem;
+  margin-bottom: 2rem;
 }
 
 .restaurants-content_heart {
   color: black;
+  margin-left: 18rem;
+  margin-top: -4.8rem;
 }
 
 .footer {
@@ -213,11 +214,15 @@ main .city i {
 .footer_container {
   display: flex;
   flex-direction: column;
+  margin-bottom: 2rem;
 }
 
 .footer a {
   color: white;
-  gap: 10rem;
+  margin-left: 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .footer h3 {
@@ -228,10 +233,8 @@ main .city i {
   display: flex;
   justify-content: center;
   align-items: center;
-}
-
-.href1 {
-  padding: 0.5em;
+  font-size: 25px;
+  margin-bottom: -0.1rem;
 }
 
 /*# sourceMappingURL=style.css.map */
