--- a/SCSS/menus.scss
+++ b/SCSS/menus.scss
@@ -42,6 +42,55 @@ header {
     padding-left: 1rem;
     margin-left: 1rem;
     width: 95%;
-    height: 90px;
+    height: 80px;
     gap: 1rem;
+    display: flex;
+    margin-bottom: 1rem;
 }
+.titre h2 {
+    padding: 1rem;
+    }
+.menu_titre {
+     padding-right: 1rem;
+    }
+        .menu p {
+margin-top: -1rem
+    }
+.menu_price p {
+   margin-left: 3rem; 
+   @include display;
+   text-align: center;
+    }
+
+
+        
+.footer {
+    border: 2px black solid;
+    @include display;
+    background-color: #353535;
+}    
+        .footer_container {
+            display: flex;
+            flex-direction: column;
+            margin-bottom: 2rem;
+        }
+                .footer a {
+                    color: white;
+                    margin-left: 1rem;
+                    @include display;
+                }    
+
+                .footer h3 {
+                    font-family: "Shrikhand", cursive;
+                    text-align: center;
+                    position: relative;
+                    color: white;
+                    @include display;
+                    font-size: 25px;
+                    margin-bottom: -0.1rem;
+                }
+               
+            
+
+
+
