--- a/SCSS/menus.scss
+++ b/SCSS/menus.scss
@@ -53,13 +53,17 @@ header {
 .menu_titre {
      padding-right: 1rem;
     }
-        .menu p {
+        .menu_titre p {
 margin-top: -1rem
+    }
+
+.menu_price {
+    border: 1px solid grey;
+
     }
 .menu_price p {
    margin-left: 3rem; 
-   @include display;
-   text-align: center;
+   margin-top: 2rem;
     }
 
 
