--- a/CSS/style.css
+++ b/CSS/style.css
@@ -179,6 +179,7 @@ main .city i {
 
 .restaurants-content {
   height: 60px;
+  position: relative;
 }
 
 .restaurants-content_text h2 {
@@ -197,10 +198,26 @@ main .city i {
   margin-bottom: 2rem;
 }
 
-.restaurants-content_heart {
+.fa-heart {
   color: black;
-  margin-left: 18rem;
-  margin-top: -4.8rem;
+  right: 1rem;
+  top: 30%;
+  transform: translateY(-60%);
+  position: absolute;
+  font-size: 1.5rem;
+}
+
+.fas {
+  color: transparent;
+  background-image: linear-gradient(to top, rgba(147, 86, 220, 0.9), rgba(255, 121, 218, 0.9));
+  background-clip: text;
+  webkit-background-clip: text;
+  opacity: 0;
+  transition: all 200ms;
+}
+
+.fas:hover {
+  opacity: 1;
 }
 
 .footer {
@@ -223,6 +240,7 @@ main .city i {
   display: flex;
   justify-content: center;
   align-items: center;
+  padding: 0.1rem;
 }
 
 .footer h3 {
@@ -230,6 +248,7 @@ main .city i {
   text-align: center;
   position: relative;
   color: white;
+  margin-left: 2rem;
   display: flex;
   justify-content: center;
   align-items: center;
