--- a/SCSS/menus.scss
+++ b/SCSS/menus.scss
@@ -66,6 +66,16 @@ margin-top: -1rem
    margin-top: 2rem;
     }
 
+.btn {
+    font-size: 30px;
+    background-image: linear-gradient(to top, rgba(147, 86, 220, 0.9), rgba(255, 121, 218, 0.9));
+    border-radius: 32px 32px 32px 32px;
+    color: white;
+    font-size: 16px;
+    font-weight: bold;
+    height: 48px;
+    width: 15%;
+    }
 
         
 .footer {
