--- a/CSS/menus.css
+++ b/CSS/menus.css
@@ -69,6 +69,17 @@ header {
   margin-top: 2rem;
 }
 
+.btn {
+  font-size: 30px;
+  background-image: linear-gradient(to top, rgba(147, 86, 220, 0.9), rgba(255, 121, 218, 0.9));
+  border-radius: 32px 32px 32px 32px;
+  color: white;
+  font-size: 16px;
+  font-weight: bold;
+  height: 48px;
+  width: 15%;
+}
+
 .footer {
   border: 2px black solid;
   display: flex;
