--- a/CSS/menus.css
+++ b/CSS/menus.css
@@ -4,6 +4,8 @@ body {
   margin: 0;
   font-family: "Roboto", sans-serif;
   background-color: #f6f6f6;
+  width: 70%;
+  margin-left: 15%;
 }
 
 header {
@@ -12,6 +14,12 @@ header {
   box-shadow: 0 0 8px rgba(0, 0, 0, 0.25);
   padding: 2px;
   position: relative;
+}
+
+.fa-arrow-left-long {
+  position: absolute;
+  left: 1rem;
+  bottom: 40%;
 }
 
 .palettedugout img {
@@ -35,17 +43,42 @@ header {
   font-family: "Shrikhand", cursive;
   padding: 1rem;
   font-size: 1.5rem;
+  margin-left: 3rem;
+}
+
+.heart {
+  color: black;
+  right: 1rem;
+  top: 4%;
+  transform: translateY(-80%);
+  position: absolute;
+  font-size: 1.5rem;
+}
+
+.fas {
+  color: transparent;
+  background-image: linear-gradient(to top, rgba(147, 86, 220, 0.9), rgba(255, 121, 218, 0.9));
+  background-clip: text;
+  webkit-background-clip: text;
+  opacity: 0;
+  transition: all 200ms;
+}
+
+.fas:hover {
+  opacity: 1;
 }
 
 .menu_carte {
   border: solid 2px red;
   border-radius: 25px;
   padding-left: 1rem;
-  margin-left: 1rem;
-  width: 70%;
+  margin-left: 2rem;
+  width: 90%;
   height: 80px;
   gap: 1rem;
   display: flex;
+  justify-content: center;
+  align-items: center;
   margin-bottom: 1rem;
   background-color: white;
 }
@@ -92,7 +125,8 @@ header {
   font-size: 16px;
   font-weight: bold;
   height: 48px;
-  width: 15%;
+  width: 25%;
+  margin-left: 39%;
 }
 
 .footer {
@@ -127,6 +161,7 @@ header {
   align-items: center;
   font-size: 25px;
   margin-bottom: -0.1rem;
+  margin-left: 2rem;
 }
 
 /*# sourceMappingURL=menus.css.map */
