nestings and variables

--- a/SCSS/libs/variables.scss
+++ b/SCSS/libs/variables.scss
@@ -3,3 +3,5 @@ $secondarygrey: #f6f6f6;
 $radiant: linear-gradient(to top, rgba(147, 86, 220, 0.9), rgba(255, 121, 218, 0.9));
 $fontprimary: "Roboto", sans-serif;
 $fontsecondary: "Shrikhand", cursive;
+$p32: 32px;
+$p16: 16px;
