--- a/CSS/style.css
+++ b/CSS/style.css
@@ -23,7 +23,7 @@ main .city {
 }
 
 i {
-  font-size: 22px;
+  font-size: 25px;
 }
 
 .reservation {
@@ -151,7 +151,7 @@ i {
   position: relative;
   height: 250px;
 }
-.menus .restaurants-card img {
+.menus img {
   width: 100%;
   height: 175px;
   border-top-left-radius: 10px;
@@ -163,29 +163,29 @@ i {
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 3rem;
+  gap: 48px;
 }
 .restaurants-content {
   height: 60px;
   position: relative;
 }
-.restaurants-content .restaurants-content_text h2 {
+.restaurants-content h2 {
   color: black;
   font-size: 22px;
   align-items: center;
   display: flex;
   margin-top: 0.3rem;
 }
-.restaurants-content .restaurants-content_text p {
+.restaurants-content p {
   display: flex;
   color: black;
-  margin-top: -1rem;
-  margin-left: 2rem;
-  margin-bottom: 2rem;
+  margin-top: -16px;
+  margin-left: 32px;
+  margin-bottom: 32px;
 }
 .restaurants-content .fa-heart {
   color: black;
-  right: 1rem;
+  right: 16px;
   top: 30%;
   transform: translateY(-60%);
   position: absolute;
@@ -214,12 +214,12 @@ i {
 .footer_container {
   display: flex;
   flex-direction: column;
-  margin-bottom: 2rem;
+  margin-bottom: 32px;
 }
 
 .footer a {
   color: white;
-  margin-left: 1rem;
+  margin-left: 16px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -231,7 +231,7 @@ i {
   text-align: center;
   position: relative;
   color: white;
-  margin-left: 2rem;
+  margin-left: 32px;
   display: flex;
   justify-content: center;
   align-items: center;
