--- a/SCSS/style.scss
+++ b/SCSS/style.scss
@@ -12,7 +12,7 @@ header {
     font-family: $fontsecondary;
     text-align: center;
     box-shadow: 0 0 8px rgb(0 0 0 /25%);
-    padding: 2px;
+    padding: $p16 - 14px;
     position: relative;}
 
 main 
@@ -20,28 +20,28 @@ main
     background-color: $primarygrey;
     @include display;
     padding: 4px;
-    gap: 16px;}
+    gap: $p16;}
         i {
-        font-size: 22px;}
+        font-size: $p16 + 9px;}
 
 
 .reservation {
    text-align: center;
    background-color: $secondarygrey;
-   padding-bottom: 32px;
+   padding-bottom: $p32;
     .h2 {
     margin: 0px;
-    padding-top: 32px;
-    font-size: 30px;}
+    padding-top: $p32;
+    font-size: $p32 - 2px;}
     .p {
-        font-size: 16px;}
+        font-size: $p16;}
     button {
             background-image: $radiant;
-            border-radius: 32px 32px 32px 32px;
+            border-radius: $p32 $p32 $p32 $p32;
             color: white;
-            font-size: 16px;
+            font-size: $p16;
             font-weight: bold;
-            height: 48px;
+            height: $p32 + 16px;
             width: 25%;}
         &::hover {
     transform: scale(1.02);
@@ -82,7 +82,7 @@ main
         @include number;
         transform: translate(-15px);}
 }
-
+    
 .menus {
     h2 {
     @include h2;}
@@ -90,11 +90,11 @@ main
     .restaurants-card {
         @include card;
         height: 250px;}
-        .restaurants-card img {
+        img {
         @include card-img;}
         .contain1 {     
             @include display;
-            gap: 3rem;
+            gap: $p32 + 16px;
             }
         .contain2 {
             @extend .contain1
@@ -104,21 +104,21 @@ main
         .restaurants-content {
             height: 60px;
             position: relative;
-                .restaurants-content_text h2 {
+                h2 {
                     @include color;
-                    font-size: 22px;
+                    font-size: $p32 - 10px;
                     align-items: center;
                     display: flex;
                     margin-top: 0.3rem;}
-                .restaurants-content_text p {
+                p {
                     display: flex;
                     @include color;
-                    margin-top: -1rem;
-                    margin-left: 2rem;
-                    margin-bottom: 2rem;}
+                    margin-top: -$p16;
+                    margin-left: $p32;
+                    margin-bottom: $p32;}
                 .fa-heart {
                     @include color;
-                    right: 1rem;
+                    right: $p16;
                     top: 30%;
                     transform: translateY(-60%);
                     position: absolute;
@@ -146,11 +146,11 @@ main
         .footer_container {
             display: flex;
             flex-direction: column;
-            margin-bottom: 2rem;
+            margin-bottom: $p32;
         }
                 .footer a {
                     color: white;
-                    margin-left: 1rem;
+                    margin-left: $p16;
                     @include display;
                     padding: 0.1rem;
                 }    
@@ -160,9 +160,9 @@ main
                     text-align: center;
                     position: relative;
                     color: white;
-                    margin-left: 2rem;
+                    margin-left: $p32;
                     @include display;
-                    font-size: 25px;
+                    font-size: $p32 - 7px;
                     margin-bottom: -0.1rem;
                 }
                
