--- a/SCSS/menus.scss
+++ b/SCSS/menus.scss
@@ -1,50 +1,52 @@
 @import url('https://fonts.googleapis.com/css2?family=Shrikhand&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap');
 @import "libs/mixins.scss";
+@import "libs/variables.scss";
 
 body {
     margin: 0;
-    font-family: "Roboto", sans-serif;
-    background-color: #f6f6f6;
+    font-family: $fontprimary;
+    background-color: $secondarygrey;
     width: 70%;
     margin-left: 15%;
 }
 
 header {
-    font-family: "Shrikhand", cursive;
+    font-family: $fontsecondary;
     text-align: center;
     box-shadow: 0 0 8px rgb(0 0 0 /25%);
     padding: 2px;
     position: relative;}
+
     .fa-arrow-left-long {
         position: absolute;
-        left: 1rem;
-        bottom: 40%;
-    }
-            .palettedugout img {
+        left: $p16;
+        bottom: 40%;}
+    
+        .palettedugout img {
             max-width: 100%;
             max-height: 12rem;
             width: 100%;
             object-fit: cover;
             }
+               
 .menu {
     margin-top: -3.5rem;
-    border: solid 2px red;
-    background-color: #f6f6f6;
+    background-color: $secondarygrey;
     z-index: 1;
     position: relative;
-    border-radius: 2rem 2rem 0 0;
-    height: 1400px;
-}  
-    .menu h1 {
-        font-family: "Shrikhand", cursive;
-        padding: 1rem;
+    border-radius: $p32 $p32 0 0;
+    height: 1100px;
+  
+    h1 {
+        font-family: $fontsecondary;
+        padding: $p16;
         font-size: 1.5rem;
-        margin-left: 3rem;
+        margin-left: $p48;
         }
-.heart {
+    .heart {
             @include color;
-            right: 1rem;
+            right: $p16;
             top: 4%;
             transform: translateY(-80%);
             position: absolute;
@@ -52,7 +54,7 @@ header {
         }
         .fas {
                 color: transparent;
-                background-image: linear-gradient(to top, rgba(147, 86, 220, 0.9), rgba(255, 121, 218, 0.9));
+                background-image: $radiant;
                 background-clip: text;
                 webkit-background-clip: text;
                 opacity: 0;
@@ -61,85 +63,84 @@ header {
              .fas:hover {
                 opacity: 1;
                 }
-
+}
 .menu_carte {
-    border: solid 2px red;
-    border-radius: 25px;
-    padding-left: 1rem;
-    margin-left: 2rem;
+    border-radius: $p25;
+    padding-left: $p16;
+    margin-left: $p32;
     width: 90%;
     height: 80px;
-    gap: 1rem;
+    gap: $p16;
     @include display;
-    margin-bottom: 1rem;
+    margin-bottom: $p16;
     background-color: white;
-}
-.titre h2 {
-    padding: 1rem;
+    &:h2 {
+    padding: $p16;
     }
 .menu_titre {
-     padding-right: 1rem;
+     padding-right: $p16;
     }
-        .menu_titre p {
-margin-top: -1rem
+    p {
+margin-top: -$p16;
     }
 
 .menu_price {
     margin-left: auto;
     }
-.menu_price p {
+    &:p {
    margin-top: 2.8rem;
    font-weight: bold;
     }
-.check {
-    background-color: #99e2d0;
+        .check {
+    background-color: $green;
     height: 79px;
     width: 80px;
-    color: white;
+    color: $wcolor;
     @include display;
-    border-radius: 0 25px 25px 0;
-    font-size: 2rem;
+    border-radius: 0 $p25 $p25 0;
+    font-size: $p32;
     display: none;
     }
+}
 
 .btn {
-    font-size: 30px;
-    background-image: linear-gradient(to top, rgba(147, 86, 220, 0.9), rgba(255, 121, 218, 0.9));
-    border-radius: 32px 32px 32px 32px;
-    color: white;
-    font-size: 16px;
+    font-size: $p32 - 2px;
+    background-image: $radiant;
+    border-radius: $p32 $p32 $p32 $p32;
+    color: $wcolor;
+    font-size: $p16;
     font-weight: bold;
-    height: 48px;
+    height: $p48;
     width: 25%;
     margin-left: 39%;
+    margin-bottom: $p16;
     }
 
         
 .footer {
-    border: 2px black solid;
     @include display;
     background-color: #353535;
 }    
         .footer_container {
             display: flex;
             flex-direction: column;
-            margin-bottom: 2rem;
+            margin-bottom: $p32;
         }
                 .footer a {
-                    color: white;
-                    margin-left: 1rem;
+                    color: $wcolor;
+                    margin-left: $p16;
                     @include display;
                 }    
 
                 .footer h3 {
-                    font-family: "Shrikhand", cursive;
+                    font-family: $fontsecondary;
                     text-align: center;
                     position: relative;
-                    color: white;
+                    color: $wcolor;
                     @include display;
-                    font-size: 25px;
+                    font-size: $p25;
                     margin-bottom: -0.1rem;
-                    margin-left: 2rem;
+                    margin-left: $p32;
                 }
                
             
