--- a/SCSS/libs/variables.scss
+++ b/SCSS/libs/variables.scss
@@ -1,6 +1,7 @@
 $primarygrey: #eaeaea;
 $secondarygrey: #f6f6f6;
 $green: #99e2d0;
+$darkgrey: #353535;
 $wcolor: white;
 $radiant: linear-gradient(to top, rgba(147, 86, 220, 0.9), rgba(255, 121, 218, 0.9));
 $fontprimary: "Roboto", sans-serif;
